// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component -> Cube should render the Cube in completed state without throwing an error 1`] = `
<div
  className="styles__Container-sc-1pwogyu-0 fkagAV"
>
  <div
    className="styles__Polygon-sc-1pwogyu-1 dCIqjj"
  >
    <div
      className="styles__Side-sc-1pwogyu-2 styles__Front-sc-1pwogyu-8 deBIOm"
    >
      <div
        className="styles__Tracer-sc-18vfsm6-0 hNwUQp"
        direction="left"
      />
    </div>
    <div
      className="styles__Side-sc-1pwogyu-2 styles__Back-sc-1pwogyu-3 gCcrQb"
    >
      <div
        className="styles__Tracer-sc-18vfsm6-0 lKbcB"
      />
    </div>
    <div
      className="styles__Side-sc-1pwogyu-2 styles__Top-sc-1pwogyu-6 eLxrDv"
    />
    <div
      className="styles__Side-sc-1pwogyu-2 styles__Bottom-sc-1pwogyu-7 cpagcj"
    >
      <div
        className="styles__Tracer-sc-18vfsm6-0 lKbcB"
      />
    </div>
    <div
      className="styles__Side-sc-1pwogyu-2 styles__Left-sc-1pwogyu-5 iDSTJS"
    >
      <div
        className="styles__Tracer-sc-18vfsm6-0 hNwUQp"
        direction="left"
      />
    </div>
    <div
      className="styles__Side-sc-1pwogyu-2 styles__Right-sc-1pwogyu-4 fTRfub"
    >
      <div
        className="styles__Tracer-sc-18vfsm6-0 lKbcB"
      />
    </div>
  </div>
</div>
`;

exports[`Component -> Cube should render the Cube in loading state without throwing an error 1`] = `
<div
  className="styles__Container-sc-1pwogyu-0 irMsJv"
>
  <div
    className="styles__Polygon-sc-1pwogyu-1 dCIqjj"
  >
    <div
      className="styles__Side-sc-1pwogyu-2 styles__Front-sc-1pwogyu-8 deBIOm"
    >
      <div
        className="styles__Tracer-sc-18vfsm6-0 hNwUQp"
        direction="left"
      />
    </div>
    <div
      className="styles__Side-sc-1pwogyu-2 styles__Back-sc-1pwogyu-3 gCcrQb"
    >
      <div
        className="styles__Tracer-sc-18vfsm6-0 lKbcB"
      />
    </div>
    <div
      className="styles__Side-sc-1pwogyu-2 styles__Top-sc-1pwogyu-6 eLxrDv"
    />
    <div
      className="styles__Side-sc-1pwogyu-2 styles__Bottom-sc-1pwogyu-7 cpagcj"
    >
      <div
        className="styles__Tracer-sc-18vfsm6-0 lKbcB"
      />
    </div>
    <div
      className="styles__Side-sc-1pwogyu-2 styles__Left-sc-1pwogyu-5 iDSTJS"
    >
      <div
        className="styles__Tracer-sc-18vfsm6-0 hNwUQp"
        direction="left"
      />
    </div>
    <div
      className="styles__Side-sc-1pwogyu-2 styles__Right-sc-1pwogyu-4 fTRfub"
    >
      <div
        className="styles__Tracer-sc-18vfsm6-0 lKbcB"
      />
    </div>
  </div>
</div>
`;
